--- a/Chess Engine (Graphic).vcxproj
+++ b/Chess Engine (Graphic).vcxproj
@@ -177,6 +177,9 @@
     <ClInclude Include="Header Files\Pieces.h" />
     <ClInclude Include="Header Files\Search.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
